<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sunny_bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/updatedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/merriweather_sans"
        android:text="@string/last_updated_"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/merriweather_sans"
        android:text="@string/monday"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxTemp" />

    <TextView
        android:id="@+id/minTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/merriweather_sans"
        android:text="@string/min_00_c"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/temperature"
        app:layout_constraintStart_toStartOf="@+id/temperature"
        app:layout_constraintTop_toBottomOf="@+id/temperature" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"

        android:layout_marginEnd="10dp"
        android:background="@drawable/search_view"
        android:iconifiedByDefault="false"
        android:queryHint="Search for a City"

        android:searchIcon="@drawable/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:drawableStartCompat="@drawable/location"
        android:drawablePadding="10dp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/searchView"
        app:layout_constraintStart_toStartOf="@+id/searchView"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityName"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/sun"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textview900"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/merriweather_sans"
        android:text="@string/today"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/animation_view"
        app:layout_constraintTop_toTopOf="@+id/animation_view" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/merriweather_sans"
        android:gravity="center"
        android:text="@string/_30_c"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textview900"
        app:layout_constraintStart_toStartOf="@+id/textview900"
        app:layout_constraintTop_toBottomOf="@+id/textview900" />

    <TextView
        android:id="@+id/maxTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/merriweather_sans"
        android:text="@string/max_50_c"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/minTemp"
        app:layout_constraintStart_toStartOf="@+id/minTemp"
        app:layout_constraintTop_toBottomOf="@+id/minTemp" />

    <TextView
        android:id="@+id/weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/merriweather_sans"
        android:text="@string/sunny"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/animation_view"
        app:layout_constraintStart_toStartOf="@+id/animation_view"
        app:layout_constraintTop_toBottomOf="@+id/animation_view" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/merriweather_sans"
        android:text="@string/sample_date"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/day"
        app:layout_constraintStart_toStartOf="@+id/day"
        app:layout_constraintTop_toBottomOf="@+id/day" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date">

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:constraint_referenced_ids="linearLayout,linearLayout2,linearLayout3,linearLayout4,linearLayout5,linearLayout6"
            app:flow_maxElementsWrap="3"
            app:flow_wrapMode="chain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="80dp"
            android:layout_height="88dp"
            android:background="@drawable/background"
            android:gravity="center_vertical|bottom"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                app:srcCompat="@drawable/humidity" />

            <TextView
                android:id="@+id/humidity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather_sans"
                android:gravity="center"
                android:text="@string/_40"
                android:textColor="@color/black" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/merriweather_sans"
                android:gravity="center"
                android:text="@string/humidity"
                android:textColor="@color/black"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="80dp"
            android:layout_height="88dp"
            android:background="@drawable/background"
            android:gravity="center_vertical|bottom"
            android:orientation="vertical"
            tools:ignore="TextSizeCheck">

            <ImageView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/breeze" />

            <TextView
                android:id="@+id/windSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather_sans"
                android:gravity="center"
                android:text="@string/_00_00_m_s"
                android:textColor="@color/black" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/merriweather_sans"
                android:gravity="center"
                android:text="@string/wind_speed_"
                android:textColor="@color/black"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="80dp"
            android:layout_height="88dp"
            android:background="@drawable/background"
            android:gravity="center_vertical|bottom"
            android:orientation="vertical">

            <ImageView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/thermometer" />

            <TextView
                android:id="@+id/feelsLike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather_sans"
                android:gravity="center"
                android:text="@string/_10_c"
                android:textAllCaps="true"
                android:textColor="@color/black" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/merriweather_sans"
                android:gravity="center"
                android:text="@string/real_feel"
                android:textColor="@color/black"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="80dp"
            android:layout_height="88dp"
            android:background="@drawable/background"
            android:gravity="center_vertical|bottom"
            android:orientation="vertical">

            <ImageView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/sunrise" />

            <TextView
                android:id="@+id/sunrise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather_sans"
                android:gravity="center"
                android:text="@string/_00_00"
                android:textColor="@color/black" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/merriweather_sans"
                android:gravity="center"
                android:text="@string/sunrise"
                android:textColor="@color/black"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="80dp"
            android:layout_height="88dp"
            android:background="@drawable/background"
            android:gravity="center_vertical|bottom"
            android:orientation="vertical">

            <ImageView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/sunset" />

            <TextView
                android:id="@+id/sunset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather_sans"
                android:gravity="center"
                android:text="@string/_00_00_"
                android:textColor="@color/black" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/merriweather_sans"
                android:gravity="center"
                android:text="@string/sunset"
                android:textColor="@color/black"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="80dp"
            android:layout_height="88dp"
            android:background="@drawable/background"
            android:gravity="center_vertical|bottom"
            android:orientation="vertical">

            <ImageView

                android:layout_width="match_parent"
                android:layout_height="30dp"
                app:srcCompat="@drawable/visibility" />

            <TextView
                android:id="@+id/visibility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather_sans"
                android:gravity="center"
                android:text="@string/_0_m"
                android:textColor="@color/black" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/merriweather_sans"
                android:gravity="center"
                android:text="@string/visibility"
                android:textColor="@color/black"
                android:textSize="11sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="updatedTime,day,minTemp,cityName,animation_view,temperature,maxTemp,weather,date, textview900, constraintLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>